fix hextra-tabs z-index

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -185,7 +185,6 @@ main > div:first-child:not(.content) {
     left: 1px;
     right: 1px;
     border-top: thin solid hsla(0, 0%, 100%, 0.2);
-    z-index: -1;
 }
 
 .hextra-tabs-toggle {
@@ -197,6 +196,7 @@ main > div:first-child:not(.content) {
     position: absolute;
     top: 0;
     left: 50%;
+    z-index: 1;
     display: block;
     clip-path: polygon(0px 100%, 5px calc(100% - 6px), calc(100% - 5px) calc(100% - 6px), 100% 100%);
     opacity: 1;
